[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tomi3-grub-counter"
version = "0.6.0"
description = "Live grub count reader for Tales of Monkey Island 3 (Proton/Wine and Windows)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
keywords = ["monkey-island", "telltale", "grub", "speedrun", "obs"]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/flipkick/tomi3-grub-counter"
"Bug Tracker" = "https://github.com/flipkick/tomi3-grub-counter/issues"

[project.scripts]
monitor_grub_count = "monitor_grub_count:main"
extract_grub_count_from_save = "extract_grub_count_from_save:main"

[project.gui-scripts]
extract_grub_count_from_save_gui = "extract_grub_count_from_save_gui:main"
monitor_grub_count_gui = "monitor_grub_count_gui:main"

[tool.setuptools]
py-modules = ["monitor_grub_count", "monitor_grub_count_gui", "extract_grub_count_from_save", "extract_grub_count_from_save_gui", "tomi3_save", "tomi3_ram"]
